--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip3 install -r requirements.txt
+        python3 -m venv venv
+        source venv/bin/activate
+        pip3 install -r requirements.txt -vvv
     - name: Run Tests
       run: |
         python manage.py test
