--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,6 +27,7 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         pip3 install -r requirements.txt -vvv
+      continue-on-error: true
     - name: Run Tests
       run: |
         python manage.py test
