--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,4 +30,6 @@ jobs:
       continue-on-error: true
     - name: Run Tests
       run: |
+        python3 -m venv venv
+        source venv/bin/activate
         python manage.py test
