--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,17 +10,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -32,4 +28,4 @@ jobs:
       run: |
         python3 -m venv venv
         source venv/bin/activate
-        python manage.py test
+        python manage.py build
