--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ constantly==15.1.0
 cryptography==2.7
 defusedxml==0.6.0
 Django==2.2.4
-django-allauth==0.40.0 --no-binary :all:
+django-allauth==0.40.0 
 django-countries==5.5
 django-crispy-forms==1.7.2
 django-tinymce4-lite==1.7.5
