--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,16 +16,13 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: 3.9
+        python-version: 3.7
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        python3 -m venv venv
-        source venv/bin/activate
-        pip3 install -r requirements.txt -vvv
+        pip --version
+        pip install -r requirements.txt -vvv
       continue-on-error: true
     - name: Run Tests
       run: |
-        python3 -m venv venv
-        source venv/bin/activate
         python manage.py build
