--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,13 +16,13 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
-        python-version: 3.7
+        python-version: 3.8
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip --version
-        pip install -r requirements.txt -vvv
-      continue-on-error: true
-    - name: Run Tests
-      run: |
-        python manage.py build
+        python3 --version
+    #   continue-on-error: true
+    # - name: Run Tests
+    #   run: |
+    #     python manage.py build
